i fix all part for my wedsite

--- a/src/views/media.hbs
+++ b/src/views/media.hbs
@@ -1,7 +1,8 @@
 <div id="All-courses">
-  <hr>
-  <h1><strong>All Courses</h1></strong>
 </div>
+<hr>
+<h1><strong>All Courses</h1></strong>
+ <hr>
 <section class="card">
   </div>
   <hr>
@@ -14,29 +15,30 @@
   <thead>
       <tr>
         <th></th>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th>Wednesday</th>
-        <th>Thurday</th>
-        <th>Friday</th>
+        <th class="hide">Monday</th>
+        <th class="hide">Tuesday</th>
+        <th class="hide">Wednesday</th>
+        <th class="hide">Thurday</th>
+        <th class="hide">Friday</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th scope="row"> AM 9:30 - 12:15</th>
-        <td>NO Tutor</td>
-        <td>Tutor on Duty</td>
-        <td>Tutor on Duty</td>
-        <td>Tutor on Duty</td>
-        <td>Tutor on Duty</td>
+        <th class="hide"> AM 9:30 - 12:15</th>
+        <td class="hide">NO Tutor</td>
+        <td class="hide">Tutor on Duty</td>
+        <td class="hide">Tutor on Duty</td>
+        <td class="hide">Tutor on Duty</td>
+        <td class="hide">NO Tutor</td>
       </tr>
       <tr>
-        <th scope="row"> PM 1 - 4:15</th>
-        <td>NO Tutor</td>
-        <td>Tutor on Duty</td>
-        <td>Tutor on Duty</td>
-        <td>Tutor on Duty</td>
-        <td>Tutor on Duty</td>
+        <th class="hide"> PM 1 - 4:15</th>
+         <td class="hide">Tutor on Duty</td>
+        <td class="hide">Tutor on Duty</td>
+        <td class="hide">Tutor on Duty</td>
+        <td class="hide">Tutor on Duty</td>
+         <td class="hide">Tutor on Duty</td>
+        
       </tr>
     </tbody>
   </table>
