--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -16,7 +16,7 @@
             <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
 
                 <!-- Content -->
-                <h6 class="text-uppercase font-weight-bold">Kelvin Collegue</h6>
+                <h6 class="text-uppercase font-weight-bold">Kelvin College</h6>
                 <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>These courses are free and available to all and they would like a website
                     that informs potential learners about the courses that are available and how to access the opportunities.
