--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -13,7 +13,10 @@ img {
   padding: 2rem 0;
 }
 
+
+
 .section-head{
+  text-align: center;
   font-size: 2.5rem;
   margin: 0;
 }
@@ -37,6 +40,7 @@ img {
 
 #carouselExampleIndicators h3{
   font-size: 6rem;
+  position: relative;
 }
 
 #carouselExampleIndicators h2{
@@ -82,13 +86,11 @@ img {
    padding:4px;
  }
  
-#All-courses h1 {
- color: aliceblue;
+ h1 {
  font-size: 4rem;
- margin-bottom: 0;
 }
 
-#All-courses .table {
+#All-courses .tablse {
 flex: none;
 }
 
@@ -294,23 +296,46 @@ position: relative;
 
 /* Media Queries */
 
- @media screen and (max-width: 1024px) {
-  .table-responsive{  
-    overflow-y: hidden;
-    font-family: serif;
-    word-spacing: 0px;
-    margin: 20px top;
-    
-   
-    
+@media only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+  thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
   }
   .dropdown-item{
     font-size: 20px;
-    width: 100%;
+    width: 40%;
   }
-
+	
 }
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 750px ) {
   .table{ 
     background: #dbd4b4;
     border-collapse: collapse;
@@ -322,25 +347,9 @@ position: relative;
     text-align: center;
     padding: 10px;
   }
-  }
   .dropdown-item{
-    font-size: 10px;
-    width: 25%;
+    font-size: 7px;
+    width: 40%;
   }
-}
-@media screen and (max-width: 480px) {
-  .table {  
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 50%;
-    border: 1px solid #ddd;
-  }
-  th, td {
-    text-align: center;
-    padding: 10px;
-  }
-  .dropdown-item{
-    font-size: 5px;
-    width: 50%;
-  }
+  
 }
