--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,4 +1,4 @@
-<hr>
+<div>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -10,7 +10,6 @@
       <img src="/img/pexels-photo-1438081.jpeg" alt="aply">
       <div class="carousel-caption d-none d-md-block">
         <h3>COURSES OPEN NOW</h3>
-        <h1>FOR THIS YEAR</h1>
       </div>
     </div>
     <div class="carousel-item">
@@ -35,26 +34,27 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-<hr>
 <button type="button"  href="/media" class="btn btn-danger btn-lg btn-block"><a href="/media" >Search All Courses</a></button>
 <section id="main2" class="section">
   <div class="container">
     <h2 class="section-head">
       <i class="fas fa-main"></i>Search All Ours Courses For This Year 2019</h2>
     <hr class="my-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
+    <section class="section">
+       <div class="container">
           <h2>College Certification</h2>
+          <hr>
           <p>Learners can take a range of courses at different levels and receive college certification and recognition for
             learning. Introductory courses are for those with little or no experience of using a computer or digital device.
             The introductory courses cover a range of skills such as using office applications, file management up to developing
             mobile apps and web pages. Intermediate courses build upon skills developed through the introductory courses
             and will generally lead to preparing learners for ECDL assessments or further study in other programmes </p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div class="col-md-6">
+        <hr>
+        <section class="section">
+         <div class="container">
           <h2>SQA</h2>
+          <hr>
           <p>The SQA units available in Flexible learning are aimed at SCQF levels 3 and 4. These units have been chosen
             as they combine well with our introductory and intermediate college certificated courses. The level 3 courses
             in Using A Keyboard and the NPA in Digital Literacies which comprises the Computer Basics, Digital Skills and
@@ -63,21 +63,53 @@
             Processing, Web Apps: Spreadsheets and Web Apps: Presentations. These again can be achieved as stand-alone units
             but all three must be completed to receive the NPA.
           </p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div class="col-md-6">
-          <h2>ECD</h2>
+        <hr>
+        <hr>
+        <section class="section">
+          <div class="container">
+          <h2>ECDL</h2>
+          <hr>
           <p>The European Computer Driving Licence is an SCQF level 5 course made up of 7 units. All 7 units must be completed
             to achieve your certificate. The units are mainly practical - from using office applications, managing files
             and using the internet and email applications. There are also a couple of units which require you to demonstrate
             knowledge and understanding of IT security and the fundamentals of using the operating system.
           </p>
-          <p> <a class="btn btn-primary btn-lg" href="#" role="button">View details </a></p>
         </div>
       </div>
-      <a class="btn btn-primary btn-lg" href="https://www.glasgowkelvin.ac.uk/courses/" role="button">Glasgow Kelvin College </a>
-      <hr>
-      <img src="img/smartmockups_jsnmff9q.png" alt="smartckps">
+     <hr>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="3" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img src="img/Ecdllogo.jpg" alt="aply">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="img/smartmockups_jsnmff9q.png" alt="aply">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="img/smartmockups_jucvibgs.jpg" alt="aply">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
       <hr>
     </div>
 </section>
