--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -35,7 +35,7 @@
                     <a class="dark-grey-text" href="/">Home</a>
                 </p>
                 <p>
-                    <a class="dark-grey-text"href="/media">Media</a>
+                    <a class="dark-grey-text"href="/media">courses</a>
                 </p>
                 <p>
                     <a class="dark-grey-text" href="/contact">Contact</a>
@@ -55,7 +55,7 @@
                     <a class="dark-grey-text" href="/users/signin">Your Account</a>
                 </p>
                 <p>
-                    <a class="dark-grey-text" href="/users/signup">Regist</a>
+                    <a class="dark-grey-text" href="/users/signup">Register</a>
                 </p>
 
             </div>
@@ -87,7 +87,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center text-black-50 py-3">copyright &copy:
-        <a class="dark-grey-text" href="#"> 2019 Kelvin Collegue:</a>
+        <a class="dark-grey-text" href="#"> 2019 Kelvin College:</a>
     </div>
     <!-- Copyright -->
 
