--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,7 +1,7 @@
 <img class="Thumbnail  logo m-4" itemprop="headline" src="/img/GKClogowithtext.jpg" alt="Generic placeholder image">
 <nav class="navbar navbar-expand-lg navbar-light bg-#fcadeb">
   <div class="container">
-    <a class="navbar-brand" href="/">Glasgow Kelvin College</a>
+    <a class="navbar-brand" href="/">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
       aria-label="Toggle navigation">
     </button>
