--- a/src/views/media.hbs
+++ b/src/views/media.hbs
@@ -78,17 +78,17 @@
                 <hr>
                 <h2> <a class="dropdown-item" href="#">Introduction and Intermediate Mobile App Development</a></h2>
                 <hr>
-                <h2> <a class="dropdown-item" href="#">Introdiction to Office 365 Web Apps </a></h2>
+                <h2> <a class="dropdown-item" href="#">Introduction to Office 365 Web Apps </a></h2>
                 <hr>
-                <h2> <a class="dropdown-item" href="#">Introdiction to coding</a></h2>
+                <h2> <a class="dropdown-item" href="#">Introduction to coding</a></h2>
                 <hr>
-                <h2> <a class="dropdown-item" href="#">Introdiction to Cyber Security</a></h2>
+                <h2> <a class="dropdown-item" href="#">Introduction to Cyber Security</a></h2>
                 <hr>
-                <h2> <a class="dropdown-item" href="#">Introdiction to web Development</a></h2>
+                <h2> <a class="dropdown-item" href="#">Introduction to web Development</a></h2>
                 <hr>
-                <h2> <a class="dropdown-item" href="#">Introdiction to the Internet of Thing</a></h2>
+                <h2> <a class="dropdown-item" href="#">Introduction to the Internet of Thing</a></h2>
                 <hr>
-                <h2> <a class="dropdown-item" href="#">Introdiction to Digital Markething</a></h2>
+                <h2> <a class="dropdown-item" href="#">Introduction to Digital Markething</a></h2>
                 <hr>
               </div>
             </div>
@@ -103,7 +103,7 @@
             </div>
             <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="card-block">
-                <h2> <a class="dropdown-item" href="#">Using A Keyboard</a></h2>
+                <h2> <a class="dropdown-item" href="#">Using a Keyboard</a></h2>
                 <hr>
                 <h2> <a class="dropdown-item" href="#">Computer Basics</a></h2>
                 <hr>
