--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,47 +1,47 @@
 <div>
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <img src="/img/pexels-photo-1438081.jpeg" alt="aply">
-      <div class="carousel-caption d-none d-md-block">
-        <h3>COURSES OPEN NOW</h3>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active">
+        <img src="/img/pexels-photo-1438081.jpeg" alt="aply">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>COURSES OPEN NOW</h3>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/img/achievements.jpg" alt="aply">
+        <div class="carousel-caption d-none d-md-block">
+          <h2>THE FASHION COLLECTIVE</h2>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/img/pexels-photo-346809.jpeg" alt="aply">
+        <div class="carousel-caption d-none d-md-block">
+          <p>NEW Flexible Workforce Develoment Fund</p>
+        </div>
       </div>
     </div>
-    <div class="carousel-item">
-      <img src="/img/achievements.jpg" alt="aply">
-      <div class="carousel-caption d-none d-md-block">
-        <h2>THE FASHION COLLECTIVE</h2>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="/img/pexels-photo-346809.jpeg" alt="aply">
-      <div class="carousel-caption d-none d-md-block">
-        <p>NEW Flexible Workforce Develoment Fund</p>
-      </div>
-    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<button type="button"  href="/media" class="btn btn-danger btn-lg btn-block"><a href="/media" >Search All Courses</a></button>
-<section id="main2" class="section">
-  <div class="container">
-    <h2 class="section-head">
-      <i class="fas fa-main"></i>Search All Ours Courses For This Year 2019</h2>
-    <hr class="my-4">
-    <section class="section">
-       <div class="container">
+  <button type="button" href="/media" class="btn btn-danger btn-lg btn-block"><a href="/media">Search All Courses</a></button>
+  <section id="main2" class="section">
+    <div class="container">
+      <h2 class="section-head">
+        <i class="fas fa-main"></i>Search All Ours Courses For This Year 2019</h2>
+      <hr class="my-4">
+      <section class="section">
+        <div class="container">
           <h2>College Certification</h2>
           <hr>
           <p>Learners can take a range of courses at different levels and receive college certification and recognition for
@@ -52,64 +52,64 @@
         </div>
         <hr>
         <section class="section">
-         <div class="container">
-          <h2>SQA</h2>
-          <hr>
-          <p>The SQA units available in Flexible learning are aimed at SCQF levels 3 and 4. These units have been chosen
-            as they combine well with our introductory and intermediate college certificated courses. The level 3 courses
-            in Using A Keyboard and the NPA in Digital Literacies which comprises the Computer Basics, Digital Skills and
-            Computer Applications units. These can be achieved as stand-alone units but all three must be completed to receive
-            the NPA in Digital Literacies. At level 4 the PC Passport NPA again is comprised of three units: Web Apps: Word
-            Processing, Web Apps: Spreadsheets and Web Apps: Presentations. These again can be achieved as stand-alone units
-            but all three must be completed to receive the NPA.
-          </p>
-        </div>
-        <hr>
-        <hr>
-        <section class="section">
           <div class="container">
-          <h2>ECDL</h2>
+            <h2>SQA</h2>
+            <hr>
+            <p>The SQA units available in Flexible learning are aimed at SCQF levels 3 and 4. These units have been chosen
+              as they combine well with our introductory and intermediate college certificated courses. The level 3 courses
+              in Using A Keyboard and the NPA in Digital Literacies which comprises the Computer Basics, Digital Skills and
+              Computer Applications units. These can be achieved as stand-alone units but all three must be completed to
+              receive the NPA in Digital Literacies. At level 4 the PC Passport NPA again is comprised of three units: Web
+              Apps: Word Processing, Web Apps: Spreadsheets and Web Apps: Presentations. These again can be achieved as stand-alone
+              units but all three must be completed to receive the NPA.
+            </p>
+          </div>
           <hr>
-          <p>The European Computer Driving Licence is an SCQF level 5 course made up of 7 units. All 7 units must be completed
-            to achieve your certificate. The units are mainly practical - from using office applications, managing files
-            and using the internet and email applications. There are also a couple of units which require you to demonstrate
-            knowledge and understanding of IT security and the fundamentals of using the operating system.
-          </p>
+          <hr>
+          <section class="section">
+            <div class="container">
+              <h2>ECDL</h2>
+              <hr>
+              <p>The European Computer Driving Licence is an SCQF level 5 course made up of 7 units. All 7 units must be
+                completed to achieve your certificate. The units are mainly practical - from using office applications, managing
+                files and using the internet and email applications. There are also a couple of units which require you to
+                demonstrate knowledge and understanding of IT security and the fundamentals of using the operating system.
+              </p>
+            </div>
+    </div>
+    <hr>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="3" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <img src="img/Ecdllogo.jpg" alt="aply">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/smartmockups_jsnmff9q.png" alt="aply">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/smartmockups_jucvibgs.jpg" alt="aply">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
         </div>
       </div>
-     <hr>
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="3" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <img src="img/Ecdllogo.jpg" alt="aply">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <div class="carousel-item">
-      <img src="img/smartmockups_jsnmff9q.png" alt="aply">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="img/smartmockups_jucvibgs.jpg" alt="aply">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+    <hr>
 </div>
-      <hr>
-    </div>
 </section>
