--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -7,13 +7,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-         <li class="nav-item dropdown active">
+        <li class="nav-item dropdown active">
           <a class="navbar-brand" href="/about"> About Us</a>
         </li>
         </li>
         <li class="nav-item dropdown active">
           <a class="navbar-brand" href="/media"> Courses</a>
-        </li>  
+        </li>
         </li>
         <li class="nav-item dropdown active">
           <a class="navbar-brand" href="/contact">Contact</a>
@@ -21,14 +21,14 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         {{#if user}}
-            <li class="nav-item dropdown active">
-             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             {{user.name}}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/student-details">View Profile</a>
-             <a class="dropdown-item" href="/edit-details"> Edit Profile</a>
+            <a class="dropdown-item" href="/edit-details"> Edit Profile</a>
             <a class="dropdown-item" href="/student-details">add Achievements</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/users/logout">Logout</a>
@@ -37,12 +37,18 @@
         {{else}}
         <li class="nav-item dropdown active">
           <a class="navbar-brand" href="/users/signin">Login</a>
-        </li> 
+        </li>
         <li class="nav-item dropdown active">
           <a class="navbar-brand" href="/users/signup">Register</a>
         </li>
         {{/if}}
       </ul>
+      <nav class="navbar navbar-light bg-faded">
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </nav>
     </div>
   </div>
 </nav>
